create characters.ejs and the logic for searching a character by name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="/search-characters">Search Characters</a>
+            <a href="/characters">Search Characters</a>
             <a href="/search-species">Search Species</a>
             <a href="/search-locations">Search Locations</a>
         </nav>
