create logic to search by species and the corresponding species.ejs, correct some routes in the navigation

--- a/views/characters.ejs
+++ b/views/characters.ejs
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <a href="/">Home</a>
-            <a href="/search-species">Search Species</a>
-            <a href="/search-locations">Search Locations</a>
+            <a href="/species">Search Species</a>
+            <a href="/locations">Search Locations</a>
         </nav>
     </header>
     <main>
