--- a/views/species.ejs
+++ b/views/species.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/species.css">
     <title>Species</title>
 </head>
 <body>
@@ -14,13 +15,13 @@
         </nav>
     </header>
     <main>
-        <h1>Try out some species like Dalek, Cyberman, Time Lord, Human, Silurian, Sontarian, etc.</h1>
+        <h2>Try out some species like Dalek, Cyberman, Time Lord, Human, Silurian, Sontarian, etc.</h2>
         <form method="GET" action="/species">
             <label for="name">Species' Name: </label>
             <input id="name" name="name"/>
             <button>Search</button>
         </form>
-        <h2>Search Results</h2>
+        <h1>Search Results</h1>
     <div>
         <% if (!searchPerformed) { %>
             <p>Enter a name above to search for species.</p>
