--- a/views/species.ejs
+++ b/views/species.ejs
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <h2>Try out some species like Dalek, Cyberman, Time Lord, Human, Silurian, Sontarian, etc.</h2>
+        <h2>Try out some species like Dalek, Cyberman, Time Lord, Human, Silurian, Sontaran, etc.</h2>
         <form method="GET" action="/species">
             <label for="name">Species' Name: </label>
             <input id="name" name="name"/>
