create logic to fetch characters by categories, create a corresponding ejs and css file, update navigation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
             <a href="/characters">Search Characters</a>
             <a href="/species">Search Species</a>
             <a href="/locations">Search Locations</a>
+            <a href="/characters/categorized">Categorized Characters</a>
         </nav>
     </header>
     <main>
