--- a/views/locations.ejs
+++ b/views/locations.ejs
@@ -12,6 +12,7 @@
             <a href="/">Home</a>
             <a href="/characters">Search Characters</a>
             <a href="/species">Search Species</a>
+            <a href="/characters/categorized">Categorized Characters</a>
         </nav>
     </header>
     <main>
