--- a/views/species.ejs
+++ b/views/species.ejs
@@ -12,6 +12,7 @@
             <a href="/">Home</a>
             <a href="/characters">Search Characters</a>
             <a href="/locations">Search Locations</a>
+            <a href="/characters/categorized">Categorized Characters</a>
         </nav>
     </header>
     <main>
